tests/ui/type-alias-impl-trait/multi-error.stderr
error[E0792]: expected generic type parameter, found `u32`
  --> $DIR/multi-error.rs:18:9
   |
LL |     type Bar<T> = impl Sized;
   |              - this generic parameter must be used with a generic type parameter
...
LL |         ((), ())
   |         ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
